Move contour plot examples to Codepen

--- a/_posts/plotly_js/contour/2015-04-09-simple-contour.html
+++ b/_posts/plotly_js/contour/2015-04-09-simple-contour.html
@@ -1,10 +1,11 @@
 ---
 name: Simple Contour Plot
-plot_url: https://plot.ly/~PlotBot/58
+plot_url: https://codepen.io/plotly/embed/RWvxeO/?height=521&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 1
 sitemap: false
+arrangement: horizontal
 ---
 var size = 100, x = new Array(size), y = new Array(size), z = new Array(size), i, j;
 
