--- a/_posts/plotly_js/contour/2015-08-12-color-bar-size-for-contour-plots.html
+++ b/_posts/plotly_js/contour/2015-08-12-color-bar-size-for-contour-plots.html
@@ -1,10 +1,11 @@
 ---
 name: Color Bar Size
-plot_url: https://plot.ly/~neda/5165/
+plot_url: https://codepen.io/plotly/embed/MaLQwE/?height=526&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 12
 sitemap: false
+arrangement: horizontal
 ---
 
 var data = [ {
