--- a/_posts/plotly_js/contour/2015-08-12-color-bar-title.html
+++ b/_posts/plotly_js/contour/2015-08-12-color-bar-title.html
@@ -1,10 +1,11 @@
 ---
 name: Color Bar Title
-plot_url: https://plot.ly/~neda/5163/
+plot_url: https://codepen.io/plotly/embed/dYadPr/?height=525&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 11
 sitemap: false
+arrangement: horizontal
 ---
 var data = [ {
   z: [[10, 10.625, 12.5, 15.625, 20],
