--- a/_posts/plotly_js/contour/2015-08-12-colorscale-for-contour-plot.html
+++ b/_posts/plotly_js/contour/2015-08-12-colorscale-for-contour-plot.html
@@ -1,10 +1,11 @@
 ---
 name: Colorscale for Contour Plot
-plot_url: https://plot.ly/~neda/5054/
+plot_url: https://codepen.io/plotly/embed/GpzyzV/?height=504&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 4
 sitemap: false
+arrangement: horizontal
 ---
 
 var data = [{
