--- a/_posts/plotly_js/contour/2015-08-12-contour-lines.html
+++ b/_posts/plotly_js/contour/2015-08-12-contour-lines.html
@@ -1,10 +1,11 @@
 ---
 name: Contour Lines
-plot_url: https://plot.ly/~neda/5157/
+plot_url: https://codepen.io/plotly/embed/PPVQYw/?height=501&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 9
 sitemap: false
+arrangement: horizontal
 ---
 var data = [ {
   z: [[10, 10.625, 12.5, 15.625, 20],
