--- a/_posts/plotly_js/contour/2015-08-12-cumtom-size-and-range-contour.html
+++ b/_posts/plotly_js/contour/2015-08-12-cumtom-size-and-range-contour.html
@@ -1,10 +1,11 @@
 ---
 name: Customizing Size and Range of a Contour Plot's Contours
-plot_url: https://plot.ly/~neda/5056/
+plot_url: https://codepen.io/plotly/embed/bVzaJE/?height=502&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 5
 sitemap: false
+arrangement: horizontal
 ---
 
 var data = [ {
