--- a/_posts/plotly_js/contour/2015-08-12-setting-xy-coordinates-contour.html
+++ b/_posts/plotly_js/contour/2015-08-12-setting-xy-coordinates-contour.html
@@ -1,10 +1,11 @@
 ---
 name: Setting X and Y Coordinates in a Contour Plot
-plot_url: https://plot.ly/~neda/5188/
+plot_url: https://codepen.io/plotly/embed/GpzyPb/?height=526&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 3
 sitemap: false
+arrangement: horizontal
 ---
 var data = [{
   z: [[10, 10.625, 12.5, 15.625, 20],
