--- a/_posts/plotly_js/contour/2015-08-12-smoothing-contour-lines.html
+++ b/_posts/plotly_js/contour/2015-08-12-smoothing-contour-lines.html
@@ -1,10 +1,11 @@
 ---
 name: Smoothing Contour Lines
-plot_url: https://plot.ly/~neda/5153/
+plot_url: https://codepen.io/plotly/embed/LpqeKX/?height=507&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 8
 sitemap: false
+arrangement: horizontal
 ---
 
 var data = [ {
