--- a/_posts/plotly_js/contour/2015-08-12-styling-color-bar-ticks-for-contour-plots.html
+++ b/_posts/plotly_js/contour/2015-08-12-styling-color-bar-ticks-for-contour-plots.html
@@ -1,10 +1,11 @@
 ---
 name: Styling Color Bar Ticks for Contour Plots
-plot_url: https://plot.ly/~neda/5174/
+plot_url: https://codepen.io/plotly/embed/WQPMQR/?height=520&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 13
 sitemap: false
+arrangement: horizontal
 ---
 var data = [ {
   z: [[10, 10.625, 12.5, 15.625, 20],
