--- a/_posts/plotly_js/contour/2015-08-12-connect-gaps-in-matrix-contour.html
+++ b/_posts/plotly_js/contour/2015-08-12-connect-gaps-in-matrix-contour.html
@@ -1,10 +1,11 @@
 ---
 name: Connect the Gaps between Null Values in the Z Matrix
-plot_url: https://plot.ly/~neda/5138/
+plot_url: https://codepen.io/plotly/embed/OydzeV/?height=514&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 7
 sitemap: false
+arrangement: horizontal
 ---
 var trace1 = {
   z: [[null, null, null, 12, 13, 14, 15, 16],
