--- a/_posts/plotly_js/contour/2015-08-12-custom-colorscale-for-contour-plot.html
+++ b/_posts/plotly_js/contour/2015-08-12-custom-colorscale-for-contour-plot.html
@@ -1,10 +1,11 @@
 ---
 name: Custom Colorscale for Contour Plot
-plot_url: https://plot.ly/~Nicole_G/3021/
+plot_url: https://codepen.io/plotly/embed/KdJQKm/?height=523&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 10
 sitemap: false
+arrangement: horizontal
 ---
 
 var data = [ {
