--- a/_posts/plotly_js/contour/2015-08-12-customizing-spacing-between-x-and-y-ticks.html
+++ b/_posts/plotly_js/contour/2015-08-12-customizing-spacing-between-x-and-y-ticks.html
@@ -1,10 +1,11 @@
 ---
 name: Customizing Spacing Between X and Y Ticks
-plot_url: https://plot.ly/~neda/5200/
+plot_url: https://codepen.io/plotly/embed/BoMJeN/?height=511&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 6
 sitemap: false
+arrangement: horizontal
 ---
 var data = [ {
   z: [[10, 10.625, 12.5, 15.625, 20],
