--- a/_posts/plotly_js/contour/2015-08-12-smooth-contour-coloring.html
+++ b/_posts/plotly_js/contour/2015-08-12-smooth-contour-coloring.html
@@ -1,10 +1,11 @@
 ---
 name: Smooth Contour Coloring
-plot_url: https://plot.ly/~chris/15677/
+plot_url: https://codepen.io/plotly/embed/QjYaeG/?height=507&theme-id=15263&default-tab=result
 language: plotly_js
 suite: contour
 order: 9
 sitemap: false
+arrangement: horizontal
 ---
 var data = [ {
   z: [[10, 10.625, 12.5, 15.625, 20],
