--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -33,7 +33,7 @@ redirect_from: /javascript-graphing-library/
 <body>
 
 <div id="header" style="
-  background-image: url('https://raw.githubusercontent.com/plotly/documentation/gh-pages/all_static/images/unemployment.png');
+  background-image: url('https://s3-us-west-1.amazonaws.com/plotly-tutorials/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
@@ -46,13 +46,13 @@ redirect_from: /javascript-graphing-library/
 	{% include header.html %}
 
   <div style="
-    background-image: linear-gradient(0deg, rgba(128,122,54, 0.8)  0%, rgba(58,124,187, 0.7) 100%);
+    background-image: linear-gradient(0deg, rgba(100,91,158, 0.89)  0%, rgba(58,124,187, 0.89) 100%);
     width: 100%;
     height: 100%;
   "></div>
 
   <div class="js-splash--banner-container">
-    <div class="js-splash--banner-title" style="font-size: 4.2rem; margin-top: 0; margin-bottom: 2rem; font-weight: 300; ">plotly.js</div>
+    <div class="js-splash--banner-title" style="font-size: 5rem; margin-top: 0; margin-bottom: 2rem; font-weight: 300; ">plotly.js</div>
     <div class="js-splash--banner-subtitle" style="font-size: 2.2rem; letter-spacing: 0.3px; font-weight: 100;   margin-top: 0; margin-bottom: 2rem; font-weight: 300;">The JavaScript graphing library that powers plotly</div>
   </div>
 </div>
@@ -398,7 +398,7 @@ $(function() {
 
     <div class="js-splash--inline-text-header">
       Most plotly graphs are drawn with SVG. This offers great compatibility across browsers and publication-quality vector image export. Unfortunately, there are inherent performance limitations with the number of SVG elements that you can draw in the DOM.<br><br>
-      <code>plotly.js</code><a target="_blank" href=""> uses <a target="_blank" href="http://stack.gl">stack.gl</a></a> for high performance 2D and 3D charting.<br><br>
+      <code>plotly.js</code> uses <a target="_blank" href="http://stack.gl">stack.gl</a> for high performance 2D and 3D charting.<br><br>
     </div>
 
     <div style="position: relative;" class="row">
@@ -446,7 +446,9 @@ $(function() {
     Plotly.Plots.resize(document.getElementById('my-graph'), {showLink: false});
   });
   </script>
-
+  <div class="js-splash--section-title">
+    <div>examples</div>
+  </div>
   </div>
 
 	{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","plotly_js"  | where:"has_thumbnail",true | sort: "order" %}
@@ -455,7 +457,6 @@ $(function() {
 	{% include documentation_eg.html %}
 
 </div>
-
 
 {% include footer.html %}
 
