--- a/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
+++ b/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
@@ -78,7 +78,7 @@ redirect_from: javascript-graphing-library/getting-started/
 
     <section class="section">
         <h2>Hello World Example</h2>
-        <iframe width="100%" height="300" src="https://jsfiddle.net/plotlygraphs/c1kt3r82/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+        <iframe width="100%" height="300" src="https://codepen.io/plotly/embed/PPVeer/?theme-id=15263&default-tab=result" allowfullscreen="allowfullscreen" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </section>
 
 <div class="row centered btnrow">
