remove filename from all the R examples

--- a/_posts/r/callbacks-buttons/2015-04-09-button-bind.html
+++ b/_posts/r/callbacks-buttons/2015-04-09-button-bind.html
@@ -9,4 +9,4 @@ sitemap: false
 order: 0
 ---
 library(plotly)
-plot_ly(z = volcano, type = "contour", filename="r-docs/basic-contour")
+plot_ly(z = volcano, type = "contour")
