--- a/_posts/r/callbacks-click/2015-04-09-click.html
+++ b/_posts/r/callbacks-click/2015-04-09-click.html
@@ -12,5 +12,4 @@ order: 0
 # Find your api_key here: https://plot.ly/settings/api
 
 plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers",
-        color = Species,
-        filename="r-docs/scatter-with-qualitative-colorscale")
+        color = Species)
