--- a/_posts/r/callbacks-dropdowns/2015-04-09-dropdown.html
+++ b/_posts/r/callbacks-dropdowns/2015-04-09-dropdown.html
@@ -25,7 +25,6 @@ g <- list(
 
 plot_ly(df, z = GDP..BILLIONS., text = COUNTRY, locations = CODE, type = 'choropleth',
         color = GDP..BILLIONS., colors = 'Blues', marker = list(line = l),
-        colorbar = list(tickprefix = '$', title = 'GDP Billions US$'),
-        filename="r-docs/world-choropleth") %>%
+        colorbar = list(tickprefix = '$', title = 'GDP Billions US$')) %>%
   layout(title = '2014 Global GDP<br>Source:<a href="https://www.cia.gov/library/publications/the-world-factbook/fields/2195.html">CIA World Factbook</a>',
          geo = g)
