--- a/_posts/r/callbacks-zoom/2015-04-09-zoom-bind.html
+++ b/_posts/r/callbacks-zoom/2015-04-09-zoom-bind.html
@@ -12,5 +12,4 @@ order: 0
 # Find your api_key here: https://plot.ly/settings/api
 
 plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers",
-        color = Species, colors = "Set1",
-        filename="r-docs/scatter-colorbrewer")
+        color = Species, colors = "Set1")
