--- a/_posts/r/sending-data/2015-04-09-extend.html
+++ b/_posts/r/sending-data/2015-04-09-extend.html
@@ -10,4 +10,4 @@ sitemap: false
 # Learn about API authentication here: https://plot.ly/r/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
-plot_ly(x = c(1, 2), y = c(1, 2), filename="name-of-my-plotly-file", <b>fileopt='extend'</b>)
+plotly_POST(plot_ly(x = c(1, 2), y = c(1, 2)), filename="name-of-my-plotly-file", <b>fileopt='extend'</b>)
