--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -95,6 +95,28 @@ fig2plotly()</code></pre>
     </section>
 
     <section class="section">
+        <h2 >Start plotting OFFLINE!</h2>
+        <div class="content-box">
+            <p >
+                Now you can convert your MATLAB figures into beautiful, interactive, Plotly graphs <b>offline</b> with <code class="no-padding">fig2plotly()</code>.
+                <br>
+                First download the offline Plotly bundle:
+            </p>
+            <pre><code>getplotlyoffline('https://cdn.plot.ly/plotly-latest.min.js')</code></pre>
+            <p >Then add the <code class="no-padding">'offline'</code> tag to <code class="no-padding">fig2plotly()</code>.
+            </p>
+            <pre><code>[X,Y,Z] = peaks;
+contour(X,Y,Z,20);
+
+fig2plotly(gcf, 'offline', true)</code></pre>
+
+            <p >
+                  Note: <code class="no-padding">fig2plotly()</code> will render your plot using Plotly's own color and styling by default. To preserve your original MATLAB color and styling, use: <code class="no-padding">fig2plotly(gcf,'strip',false)</code>.
+            </p>
+        </div>
+    </section>
+
+    <section class="section">
         <h2 >Response</h2>
         <div class="content-box" >
             <p >
