update matlab index and typo in matlab offline

--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -45,8 +45,16 @@ fig2plotly();</code></pre>
 				<iframe src="https://plot.ly/~chris/16180.embed" width="100%" height="600px"></iframe>
 
 				<h6>
-					MATLAB Online graphs are created with HTML and Javascript. You can generate and serve this HTML and JavaScript with the <a href="https://plot.ly/matlab/offline">self-hosted desktop MATLAB Online toolbox</a> or you can save and share your MATLAB Online figures with <a href="https://plot.ly/plans">Plotly's cloud service</a>.
+					MATLAB Online graphs are created with HTML and Javascript. You can save and share your MATLAB Online figures with <a href="https://plot.ly/plans">Plotly's cloud service</a> or you can generate and serve this HTML and JavaScript with the <a href="https://plot.ly/matlab/offline">self-hosted desktop MATLAB Online toolbox</a>.
 				</h6>
+				<div class="offline-graph">
+					<pre><code>getplotlyoffline('https://cdn.plot.ly/plotly-latest.min.js')
+X = linspace(0,2*pi,50)';
+Y = [cos(X), 0.5*sin(X)];
+stem(X,Y)
+fig2plotly(gcf, 'offline', true);</code></pre>
+				<p><img src="http://i.imgur.com/HeUJ7fw.png" width="100%" height="600px" alt="self-hosted matlab online"></p>
+				</div>
 
 				<h6>
 					Use Plotly with MATLAB to share your figures with non-MATLAB users, to create <a href="https://plot.ly/matlab/dashboards">web-based MATLAB dashboards</a>, as the visualization toolbox in MATLAB web applications, or just for <a href="https://plot.ly/matlab/static-image-export/">publication quality vector image export</a>.
