--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -103,7 +103,7 @@ fig2plotly()</code></pre>
                 First download the offline Plotly bundle:
             </p>
             <pre><code>getplotlyoffline('https://cdn.plot.ly/plotly-latest.min.js')</code></pre>
-            <p >Then add the <code class="no-padding">'offline'</code> tag to <code class="no-padding">fig2plotly()</code>.
+            <p >Then add the <code class="no-padding">'offline'</code> flag to <code class="no-padding">fig2plotly()</code>.
             </p>
             <pre><code>[X,Y,Z] = peaks;
 contour(X,Y,Z,20);
