--- a/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
+++ b/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
@@ -1,7 +1,8 @@
 ---
 permalink: /matlab/offline
 description: How to use Plotly offline using fig2plotly and MATLAB
-title: Plotly Offline for Plotlys MATLAB Library
+title: Plotly Offline for MATLAB
+name: Plotly Offline for MATLAB
 has_thumbnail: false
 thumbnail: /images/static-image
 layout: user-guide
@@ -19,7 +20,7 @@ language: matlab
 <ul>
 <li><p>Instead of saving the converted MATLAB figures to a server, your data and graphs will be saved as <em>html</em> files to your current working directory using Plotly Offline. These <em>html</em> files will contain all of the necessary dependencies to render the plot within a browser.</p>
 </li>
-<li><p>When your ready to share, you can just publish them to the <a href="https://plot.ly/feed]">Plotly Cloud</a> or to your company&#39;s internal <a href="https://plot.ly/product/enterprise">Plotly Enterprise</a> via the save icon in the modebar.</p>
+<li><p>When you&#39;re ready to share, you can just publish them to the <a href="https://plot.ly/feed]">Plotly Cloud</a> or to your company&#39;s internal <a href="https://plot.ly/product/enterprise">Plotly Enterprise</a> via the save icon in the modebar.</p>
 </li>
 </ul>
 <p><img src="http://i.imgur.com/FxPBBgD.png" alt="self-hosted matlab online"></p>
