Choropleth and bubble maps

--- a/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-canadian-cities.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-canadian-cities.html
@@ -1,10 +1,11 @@
 ---
 name: Canadian Cities Map
-plot_url: https://plot.ly/~etpinard/4231/
+plot_url: https://codepen.io/plotly/embed/zvebxQ/?height=506&theme-id=15263&default-tab=result
 language: plotly_js
 suite: scatter-plots-on-maps
 order: 1
 sitemap: false
+arrangement: horizontal
 ---
 function scattergeomarkers('myDiv') {
     // By default, geographic data is loaded asynchronously from
