--- a/_posts/plotly_js/bubble-maps/2015-07-11-bubble-map.html
+++ b/_posts/plotly_js/bubble-maps/2015-07-11-bubble-map.html
@@ -1,10 +1,11 @@
 ---
 name: Europe Bubble Map
-plot_url: https://plot.ly/~jackp/9103/
+plot_url: https://codepen.io/plotly/embed/wKNXPg/?height=511&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bubble-maps
 order: 1
 sitemap: false
+arrangement: horizontal
 ---
 function scattergeobubbles() {
     var data = [{
