plotly offline img edits

--- a/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
+++ b/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
@@ -1,8 +1,7 @@
 ---
 permalink: /matlab/offline
 description: How to use Plotly offline using fig2plotly and MATLAB
-title: Plotly Offline for MATLAB
-name: Plotly Offline for MATLAB
+title: Plotly Offline for Plotlys MATLAB Library
 has_thumbnail: false
 thumbnail: /images/static-image
 layout: user-guide
@@ -199,7 +198,7 @@ html_file = plotlyoffline(p);
 % open it <span class="keyword">in</span> your web browser
 web html_file -browser
 </code></pre>
-<p><img src="http://i.imgur.com/3ECfrwG.png" alt="self-hosted matlab online"></p>
+<p><img src="http://i.imgur.com/HeUJ7fw.png" width="100%" height="300px" alt="self-hosted matlab online"></p>
 </div>
 </div>
 </div>{% endraw %}
