matlab offline image size edit

--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -95,7 +95,7 @@ fig2plotly()</code></pre>
     </section>
 
     <section class="section">
-        <h2 >Start plotting OFFLINE!</h2>
+        <h2 >Start plotting <b>offline</b>!</h2>
         <div class="content-box">
             <p >
                 Now you can convert your MATLAB figures into beautiful, interactive, Plotly graphs <b>offline</b> with <code class="no-padding">fig2plotly()</code>. The graphs will be saved as html files to your current working directory and contain all of the necessary dependencies to render the plot within a browser offline.
