open source, finance, and link edits

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -1,7 +1,7 @@
 ---
 title: plotly.js | JavaScript Graphing Library
 permalink: /javascript/
-description: A free interactive javascript graphing library. Plotly.js is built on d3.js and webgl and supports over 20 types of interactive charts.
+description: A free open source interactive javascript graphing library. Plotly.js is built on d3.js and webgl and supports over 20 types of interactive charts.
 language: plotly_js
 redirect_from: /javascript-graphing-library/
 ---
@@ -53,7 +53,7 @@ redirect_from: /javascript-graphing-library/
 
   <div class="js-splash--banner-container">
     <div class="js-splash--banner-title" style="font-size: 5rem; margin-top: 0; margin-bottom: 2rem; font-weight: 300; ">plotly.js</div>
-    <div class="js-splash--banner-subtitle" style="font-size: 2.2rem; letter-spacing: 0.3px; font-weight: 100;   margin-top: 0; margin-bottom: 2rem; font-weight: 300;">The JavaScript graphing library that powers plotly</div>
+    <div class="js-splash--banner-subtitle" style="font-size: 2.2rem; letter-spacing: 0.3px; font-weight: 100;   margin-top: 0; margin-bottom: 2rem; font-weight: 300;">The open source JavaScript graphing library that powers plotly</div>
   </div>
 </div>
 
@@ -63,6 +63,7 @@ redirect_from: /javascript-graphing-library/
 		<div class="js-splash--navigation-item-container">
 			<a href="https://plot.ly/javascript/getting-started" class="js-splash--navigation-item">Getting Started</a>
 			<a href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">CDN</a>
+      <a download target=href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">Download</a>
 		</div>
 
 		<div class="js-splash--navigation-section-title">Reference</div>
@@ -76,19 +77,19 @@ redirect_from: /javascript-graphing-library/
 			<a href="#basic-charts" class="js-splash--navigation-item">Basic</a>
       <a href="#statistical-charts" class="js-splash--navigation-item">Statistical</a>
       <a href="#scientific-charts" class="js-splash--navigation-item">Scientific</a>
+      <a href="#financial-charts" class="js-splash--navigation-item">Financial</a>
       <a href="#3d-charts" class="js-splash--navigation-item">3D</a>
 			<a href="#maps" class="js-splash--navigation-item">Maps</a>
 			<a href="#chart-events" class="js-splash--navigation-item">Events and Controls</a>
 			<a href="#layout-options" class="js-splash--navigation-item">Layout Options</a>
 		</div>
 
-    <!--
 		<div class="js-splash--navigation-section-title">Community</div>
 		<div class="js-splash--navigation-item-container">
-			<a target="_blank" href="https://github.com/plotly/plotly.js/" class="js-splash--navigation-item">Contributing</a>
+			<a target="_blank" href="https://github.com/plotly/plotly.js/blob/master/CONTRIBUTING.md" class="js-splash--navigation-item">Contributing</a>
 		  <a target="_blank" href="https://github.com/plotly/plotly.js/" class="js-splash--navigation-item">GitHub</a>
+      <a target="_blank" href="http://community.plot.ly/c/plotly-js" class="js-splash--navigation-item">community.plot.ly</a>
 		</div>
-    -->
 
 		<div class="js-splash--navigation-section-title">Tools</div>
 		<div class="js-splash--navigation-item-container">
@@ -164,6 +165,7 @@ $(function() {
       <a href="#basic-charts" class="js-splash--navigation-item">Basic</a>
       <a href="#statistical-charts" class="js-splash--navigation-item">Statistical</a>
       <a href="#scientific-charts" class="js-splash--navigation-item">Scientific</a>
+      <a href="#financial-charts" class="js-splash--navigation-item">Financial</a>
         <a href="#3d-charts" class="js-splash--navigation-item">3D</a>
         <a href="#maps" class="js-splash--navigation-item">Maps</a>
         <a href="#chart-events" class="js-splash--navigation-item">Events</a>
@@ -425,7 +427,7 @@ $(function() {
 
   <div class="block-title">Fully interactive</div>
   <div class="block-content">
-  <code>plotly.js</code> charts are shipped with zoom, pan, hover, and click interactions. Click-and-drag to zoom into a region, double-click to autoscale, click on legend items to toggle traces. All of these events are also <a target="_blank" href="">exposed in the API</a>.
+  <code>plotly.js</code> charts are shipped with zoom, pan, hover, and click interactions. Click-and-drag to zoom into a region, double-click to autoscale, click on legend items to toggle traces. All of these events are also <a target="_blank" href="#chart-events">exposed in the API</a>.
   </div>
 
   <div style="border: 1px solid #C2C2C2;">
@@ -436,7 +438,7 @@ $(function() {
 
   <div class="block-title">Universal</div>
   <div class="block-content">
-  By abstracting charts to a declaritive JSON structure, <code>plotly.js</code> uses a browser-based charting library in <a target="_blank" href="">Python</a>, <a target="_blank" href="">R</a>, <a target="_blank" href="">MATLAB</a> and <a target="_blank" href="">Julia</a>.
+  By abstracting charts to a declaritive JSON structure, <code>plotly.js</code> uses a browser-based charting library in <a target="_blank" href="https://plot.ly/python/">Python</a>, <a target="_blank" href="https://plot.ly/r/">R</a>, <a target="_blank" href="https://plot.ly/matlab/">MATLAB</a> and <a target="_blank" href="https://plot.ly/julia/">Julia</a>.
   </div>
 
   <script type="text/javascript">
