--- a/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
+++ b/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
@@ -1,7 +1,8 @@
 ---
 permalink: /matlab/offline
 description: How to use Plotly offline using fig2plotly and MATLAB
-title: Plotly Offline for Plotlys MATLAB Library
+title: Plotly Offline for MATLAB
+name: Plotly Offline for MATLAB
 has_thumbnail: false
 thumbnail: /images/static-image
 layout: user-guide
