open source annoucement shout out

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -122,9 +122,8 @@ $(function() {
 
 <div style="width: 90%; margin-bottom: 30px;" class="block-content">
   Built on top of d3.js and <a target="_blank" href="http://stack.gl">stack.gl</a>, plotly.js is a high-level, declarative charting library. plotly.js ships with 20 chart types, including 3D charts, statistical graphs, and SVG maps.
-  <!--
-  <br>You can view the source on <a target="_blank" href="https://github.com/plotly/plotly.js">GitHub</a>.
-  -->
+
+  <br>Learn about <a href="https://plot.ly/javascript/open-source-announcement">why we open sourced plotly.js</a> or <a target="_blank" href="https://github.com/plotly/plotly.js">view the source on GitHub</a>.
 
 </div>
 
@@ -144,13 +143,12 @@ $(function() {
         <a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Functions</a>
       </div>
 
-      <!--
       <div class="js-splash--navigation-section-title">Community</div>
       <div class="js-splash--navigation-item-container">
         <a target="_blank" href="https://github.com/plotly/plotly.js/" class="js-splash--navigation-item">Contributing</a>
         <a target="_blank" href="https://github.com/plotly/plotly.js/" class="js-splash--navigation-item">GitHub</a>
+        <a target="_blank" href="https://plot.ly/javascript/open-source-announcement" class="js-splash--navigation-item">Why Open Source</a>
       </div>
-      -->
 
       <div class="js-splash--navigation-section-title">Tools</div>
       <div class="js-splash--navigation-item-container">
