--- a/_posts/plotly_js/lines-on-maps/2015-08-12-flightpath-london-to-nyc.html
+++ b/_posts/plotly_js/lines-on-maps/2015-08-12-flightpath-london-to-nyc.html
@@ -1,11 +1,11 @@
 ---
 name: London to NYC Great Circle
-plot_url: https://plot.ly/~jackp/8593/london-to-nyc-great-circle-click-and-drag-to-pan/
+plot_url: https://codepen.io/plotly/embed/gaqJGP/?height=533&theme-id=15263&default-tab=result
 language: plotly_js
 suite: lines-on-maps
 order: 2
 sitemap: false
-
+arrangement: horizontal
 ---
 function scattergeomarkers() {
   var data = [{
