--- a/javascript/open-source-announcement/index.html
+++ b/javascript/open-source-announcement/index.html
@@ -314,11 +314,11 @@
 <ol>
 <li><p><strong>Scientific grade.</strong> Plotly.js is comparable in scope and features to MATLAB or Python’s matplotlib, but written in JavaScript, the language of the Web. </p></li>
 <li><p><strong>SVG &amp; WebGL backends.</strong> Plotly.js uses both D3.js (SVG) and WebGL for graphics rendering. WebGL allows interactive rendering of hundreds of thousands to millions of x-y points, while D3.js is more practical for up to tens of thousands of points and vector-quality image export.</p></li>
-<li><p><strong>Testing framework.</strong> For <a href="https://github.com/plotly/plotlyjs/graphs/contributors">code contributors</a>, the plotly.js image testing framework makes it the most stable JavaScript charting library available. </p></li>
-<li><p><strong>User documentation.</strong> The <a href="https://plot.ly/javascript">plotly.js documentation</a> is hosted on GitHub pages and is open-source under a Creative Commons license. </p></li>
+<li><p><strong>Testing framework.</strong> For <a target="_blank" href="https://github.com/plotly/plotly.js/blob/master/CONTRIBUTING.md">code contributors</a>, the plotly.js image testing framework makes it the most stable JavaScript charting library available. </p></li>
+<li><p><strong>User documentation.</strong> The <a target="_blank" href="https://plot.ly/javascript">plotly.js documentation</a> is hosted on GitHub pages and is open-source under a Creative Commons license. </p></li>
 <li><p><strong>No dependencies.</strong> Plotly.js is an “all-in-one bundle” with d3.js and stack.gl modules baked-in.</p></li>
 <li><p><strong>No jQuery.</strong> jQuery has been removed from plotly.js for significantly better performance and improved browser compatibility.</p></li>
-<li><p><strong>Powered by a JSON schema</strong> Plotly.js is based on a new open-source <a href="http://help.plot.ly/json-chart-schema/">JSON schema</a> for creating, saving, and sharing scientific charts.</p></li>
+<li><p><strong>Powered by a JSON schema</strong> Plotly.js is based on a new open-source <a target="_blank" href="http://help.plot.ly/json-chart-schema/">JSON schema</a> for creating, saving, and sharing scientific charts.</p></li>
 </ol>
 
 <h4>A new JSON schema for data visualization</h4>
@@ -328,16 +328,17 @@
 <p>The JSON schema makes Plotly charts <em>language agnostic</em> - They can be easily translated from one format to another:</p>
 
 <ul>
-<li>Interactive chart: <a href="https://plot.ly/%7Eempet/6640">https://plot.ly/~empet/6640</a></li>
-<li>JSON specification: <a href="https://plot.ly/%7Eempet/6640.json">https://plot.ly/~empet/6640.json</a></li>
-<li>Raster image: <a href="https://plot.ly/%7Eempet/6640.png">https://plot.ly/~empet/6640.png</a></li>
-<li>Vector image: <a href="https://plot.ly/%7Eempet/6640.svg">https://plot.ly/~empet/6640.svg</a></li>
-<li>Excel: <a href="https://plot.ly/%7Eempet/6640.xlsx">https://plot.ly/~empet/6640.xlsx</a></li>
-<li>Python code: <a href="https://plot.ly/%7Eempet/6640.py">https://plot.ly/~empet/6640.py</a></li>
-<li>CSV data: <a href="https://plot.ly/%7Eempet/6640.csv">https://plot.ly/~empet/6640.csv</a></li>
+<li>Interactive chart: <a target="_blank" href="https://plot.ly/%7Eempet/6640">https://plot.ly/~empet/6640</a></li>
+<li>JSON specification: <a target="_blank" href="https://plot.ly/%7Eempet/6640.json">https://plot.ly/~empet/6640.json</a></li>
+<li>plotly.js code: <a target="_blank" href="https://plot.ly/%7Eempet/6640.js">https://plot.ly/~empet/6640.js</a></li>
+<li>Raster image: <a target="_blank" href="https://plot.ly/%7Eempet/6640.png">https://plot.ly/~empet/6640.png</a></li>
+<li>Vector image: <a target="_blank" href="https://plot.ly/%7Eempet/6640.svg">https://plot.ly/~empet/6640.svg</a></li>
+<li>Excel: <a target="_blank" href="https://plot.ly/%7Eempet/6640.xlsx">https://plot.ly/~empet/6640.xlsx</a></li>
+<li>Python code: <a target="_blank" href="https://plot.ly/%7Eempet/6640.py">https://plot.ly/~empet/6640.py</a></li>
+<li>CSV data: <a target="_blank" href="https://plot.ly/%7Eempet/6640.csv">https://plot.ly/~empet/6640.csv</a></li>
 </ul>
 
-<p>Browse Plotly’s community-created <a href="https://plot.ly/feed/">chart feed</a> and append “.json” to the URL of any chart to see its JSON specification.</p>
+<p>Browse Plotly’s community-created <a target="_blank" href="https://plot.ly/feed/">chart feed</a> and append “.json” to the URL of any chart to see its JSON specification.</p>
 
 <h4>Distinction from vega and vega-lite</h4>
 
