Add back missing fonts file

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -19,6 +19,9 @@ redirect_from: /javascript-graphing-library/
 {% include seo.html %}
 
 
+<!-- Font -->
+<link rel="stylesheet" type="text/css" href="{{ site.staticurl }}/fonts/font-awesome/css/font-awesome.min.css" />
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <link rel="stylesheet" href="{{ site.staticurl }}/css/layout_block.css"/>
