--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -439,7 +439,7 @@ $(function() {
 
   <div class="block-title">Universal</div>
   <div class="block-content">
-  By abstracting charts to a declarative JSON structure, <code>plotly.js</code> uses a browser-based charting library in <a target="_blank" href="">Python</a>, <a target="_blank" href="">R</a>, <a target="_blank" href="">MATLAB</a> and <a target="_blank" href="">Julia</a>.
+  By abstracting charts to a declarative JSON structure, <code>plotly.js</code> uses a browser-based charting library in <a target="_blank" href="https://plot.ly/python/">Python</a>, <a target="_blank" href="https://plot.ly/r/">R</a>, <a target="_blank" href="https://plot.ly/matlab/">MATLAB</a> and <a target="_blank" href="https://plot.ly/julia/">Julia</a>.
   </div>
 
   <script type="text/javascript">
