Migrated thumbnails for Python docs to Plotly CDN.

--- a/_posts/python/3d-bubble/2015-06-30-3dbubble.html
+++ b/_posts/python/3d-bubble/2015-06-30-3dbubble.html
@@ -3,7 +3,7 @@ permalink: python/3d-bubble-charts
 description: How to make 3D Bubble Charts in Python with Plotly. Three examples of 3D Bubble Charts.
 title: Python 3D Bubble Charts | plotly
 has_thumbnail: true
-thumbnail: /images/3dbubble.png
+thumbnail: thumbnail/3dbubble.jpg
 layout: user-guide
 name: 3D Bubble Charts
 language: python
