--- a/_posts/python/3d-clusters/2015-07-16-3d-clusters-index.html
+++ b/_posts/python/3d-clusters/2015-07-16-3d-clusters-index.html
@@ -4,7 +4,7 @@ name: 3d Point Clustering
 permalink: python/3d-point-clustering/
 description: How to cluster points in 3d with alpha shaphes in Python and Plotly
 layout: base
-thumbnail: /images/3d-clusters.png
+thumbnail: thumbnail/3d-clusters.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
