--- a/_posts/python/3d-filled-line/2015-04-09-3d-filled-line-pandas-index.html
+++ b/_posts/python/3d-filled-line/2015-04-09-3d-filled-line-pandas-index.html
@@ -4,7 +4,7 @@ name: 3D Filled Line Plots
 permalink: python/3d-filled-line-plots/
 description: How to make 3D line plots in python.
 layout: base
-thumbnail: /images/3d-filled-line-plot.png
+thumbnail: thumbnail/3d-filled-line-plot.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
