--- a/_posts/python/3d-ribbon/2015-06-30-ribbon.html
+++ b/_posts/python/3d-ribbon/2015-06-30-ribbon.html
@@ -3,7 +3,7 @@ permalink: python/ribbon-plots
 description: How to make ribbon plots in Python. 
 title: Python Ribbon Plots | plotly
 has_thumbnail: true
-thumbnail: /images/ribbon-plot.png
+thumbnail: thumbnail/ribbon-plot.jpg
 layout: user-guide
 name: Ribbon Plots
 language: python
