--- a/_posts/python/3d-subplot/2015-08-21-3d-subplots-index.html
+++ b/_posts/python/3d-subplot/2015-08-21-3d-subplots-index.html
@@ -4,7 +4,7 @@ name: 3D Subplots
 permalink: python/3d-subplots/
 description: How to make 3d subplots in Python.
 layout: base
-thumbnail: /images/3d-subplots.png
+thumbnail: thumbnail/3d-subplots.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
