--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -3,7 +3,7 @@ permalink: python/webgl-vs-svg
 description: Using WebGL with Scattergl() in Python with Plotly. Examples comparing WebGL scatter charts to SVG scatter charts in Python with Plotly.
 title: Python WebGL vs SVG | plotly
 has_thumbnail: true
-thumbnail: /images/webgl.png
+thumbnail: thumbnail/webgl.jpg
 layout: user-guide
 name: WebGL vs SVG
 language: python
