--- a/_posts/python/box/2015-04-09-box_python_index.html
+++ b/_posts/python/box/2015-04-09-box_python_index.html
@@ -4,7 +4,7 @@ name: Box Plots
 permalink: python/box-plots/
 description: How to make a box plot in python. Seven examples of box plots in python that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
