--- a/_posts/python/dendrogram/2015-06-30-dendrograms.html
+++ b/_posts/python/dendrogram/2015-06-30-dendrograms.html
@@ -3,7 +3,7 @@ permalink: python/dendrogram
 description: How to make a dendrogram in Python with Plotly. Three examples of dendrograms.
 title: Python Dendrograms | plotly
 has_thumbnail: true
-thumbnail: /images/dendrogram.png
+thumbnail: thumbnail/dendrogram.jpg
 layout: user-guide
 name: Dendrograms
 language: python
