--- a/_posts/python/distplot/2015-06-30-distplots.html
+++ b/_posts/python/distplot/2015-06-30-distplots.html
@@ -3,7 +3,7 @@ permalink: python/distplot
 description: How to make interactive Distplots in Python with Plotly. Eight examples of Distplots with Python and Plotly.
 title: Python Distplots | plotly
 has_thumbnail: true
-thumbnail: /images/distplot.png
+thumbnail: thumbnail/distplot.jpg
 layout: user-guide
 name: Distplots
 language: python
