--- a/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
@@ -4,7 +4,7 @@ name: Filenames, Folders, and Updating Plotly Graphs
 permalink: python/file-options/
 description: How to update your graphs in Python with the fileopt parameter.
 layout: base
-thumbnail: /images/fileopt.png
+thumbnail: thumbnail/fileopt.jpg
 language: python
 page_type: example_index
 has_thumbnail: false
