--- a/_posts/python/finance/2015-06-30-ohlc-charts.html
+++ b/_posts/python/finance/2015-06-30-ohlc-charts.html
@@ -3,7 +3,7 @@ permalink: python/ohlc-charts
 description: How to make interactive OHLC charts in Python with Plotly. Six examples of OHLC charts with Pandas, time series, and yahoo finance data.
 title: Python OHLC Charts | plotly
 has_thumbnail: true
-thumbnail: /images/ohlc.png
+thumbnail: thumbnail/ohlc.jpg
 layout: user-guide
 name: OHLC Charts
 language: python
