--- a/_posts/python/get-requests/2015-04-09-get-requests_python_index.html
+++ b/_posts/python/get-requests/2015-04-09-get-requests_python_index.html
@@ -4,7 +4,7 @@ name: Get Requests
 permalink: python/get-requests/
 description: How to download plotly users's public graphs and data with python.
 layout: base
-thumbnail: /images/get-requests.png
+thumbnail: thumbnail/get-requests.jpg
 language: python
 page_type: example_index
 has_thumbnail: false
