--- a/_posts/python/getting-started/2015-06-30-getting-started.html
+++ b/_posts/python/getting-started/2015-06-30-getting-started.html
@@ -3,7 +3,7 @@ permalink: python/getting-started-test
 description: Getting Started with Plotly for Python
 name: Getting Started Plotly for Python
 has_thumbnail: false
-thumbnail: /images/getting-started.png
+thumbnail: thumbnail/getting-started.jpg
 layout: getstart
 language: python
 title: Getting Started Plotly for Python
