--- a/_posts/python/horizontal-bar/2015-04-09-horizontal_bar_python_index.html
+++ b/_posts/python/horizontal-bar/2015-04-09-horizontal_bar_python_index.html
@@ -4,7 +4,7 @@ name: Horizontal Bar Charts
 permalink: python/horizontal-bar-charts/
 description: How to make a hortizontal bar chart in Python.
 layout: base
-thumbnail: /images/horizontal-bar.png
+thumbnail: thumbnail/horizontal-bar.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
