--- a/_posts/python/insets/2015-04-09-insets_python_index.html
+++ b/_posts/python/insets/2015-04-09-insets_python_index.html
@@ -4,7 +4,7 @@ name: Inset Plots
 permalink: python/insets/
 description: How to make an inset graph in python.
 layout: base
-thumbnail: /images/insets.png
+thumbnail: thumbnail/insets.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
