--- a/_posts/python/ipython-notebooks/2015-06-30-IPython_tutorial.html
+++ b/_posts/python/ipython-notebooks/2015-06-30-IPython_tutorial.html
@@ -3,7 +3,7 @@ permalink: python/ipython-notebook-tutorial
 description: IPython notebook tutorial on how to install, run, and use IPython for interactive matplotlib plotting, data analysis, and publishing code
 title: IPython Notebook Tutorial | plotly
 has_thumbnail: true
-thumbnail: /images/ipythonnb.png
+thumbnail: thumbnail/ipythonnb.jpg
 layout: user-guide
 name: IPython Notebook Tutorial
 language: python
