--- a/_posts/python/line-plots/2015-06-30-lines.html
+++ b/_posts/python/line-plots/2015-06-30-lines.html
@@ -3,7 +3,7 @@ permalink: python/line-charts
 description: How to make line charts in Python with Plotly. Examples on creating and styling line charts in Python with Plotly.
 title: Python Line Charts | plotly
 has_thumbnail: true
-thumbnail: /images/line-plots.png
+thumbnail: thumbnail/line-plots.jpg
 layout: user-guide
 name: Line Charts
 language: python
