--- a/_posts/python/line_and_scatter/2015-06-30-scatter.html
+++ b/_posts/python/line_and_scatter/2015-06-30-scatter.html
@@ -3,7 +3,7 @@ permalink: python/line-and-scatter
 description: How to make scatter plots in Python with Plotly.
 title: Python Scatter Plots | plotly
 has_thumbnail: true
-thumbnail: /images/line-and-scatter.png
+thumbnail: thumbnail/line-and-scatter.jpg
 layout: user-guide
 name: Scatter Plots
 language: python
