--- a/_posts/python/network/2015-06-30-networkx.html
+++ b/_posts/python/network/2015-06-30-networkx.html
@@ -3,7 +3,7 @@ permalink: python/network-graphs
 description: How to make Network Graphs in Python with Plotly. One examples of a network graph with NetworkX
 title: Python Network Graphs | plotly
 has_thumbnail: true
-thumbnail: /images/net.png
+thumbnail: thumbnail/net.jpg
 layout: user-guide
 name: Network Graphs
 language: python
