--- a/_posts/python/pie/2015-07-31-pie-python_index.html
+++ b/_posts/python/pie/2015-07-31-pie-python_index.html
@@ -4,7 +4,7 @@ name: Pie Charts
 permalink: python/pie-charts/
 description: How to make a pie chart in Python. A pie chart is a circular chart that displays proportional information.
 layout: base
-thumbnail: /images/pie-chart.png
+thumbnail: thumbnail/pie-chart.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
