--- a/_posts/python/privacy/2015-06-30-privacy.html
+++ b/_posts/python/privacy/2015-06-30-privacy.html
@@ -3,7 +3,7 @@ permalink: python/privacy
 description: How to set the privacy settings of plotly graphs in python.Three examples of different privacy options&#58; public, private and secret.
 name: Public, Private vs Secret Graphs
 has_thumbnail: false
-thumbnail: /images/privacy.png
+thumbnail: thumbnail/privacy.jpg
 layout: user-guide
 language: python
 title: Python Public, Private and Secret Graphs | plotly
