--- a/_posts/python/quiver/2015-07-10-quiver_python_index.html
+++ b/_posts/python/quiver/2015-07-10-quiver_python_index.html
@@ -4,7 +4,7 @@ name: Quiver Plots
 permalink: python/quiver-plots/
 description: How to make a quiver plot in Python. A quiver plot displays velocity vectors a arrows.
 layout: base
-thumbnail: /images/quiver-plot.png
+thumbnail: thumbnail/quiver-plot.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
