--- a/_posts/python/shapes/2015-06-19-shape_python_index.html
+++ b/_posts/python/shapes/2015-06-19-shape_python_index.html
@@ -4,7 +4,7 @@ name: Shapes
 permalink: python/shapes/
 description: How to make arbitrary SVG shapes in python. Seven examples of lines, circle, rectangle, and path.
 layout: base
-thumbnail: /images/shape.png
+thumbnail: thumbnail/shape.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
