--- a/_posts/python/sizing/2015-04-09-sizing_python_index.html
+++ b/_posts/python/sizing/2015-04-09-sizing_python_index.html
@@ -4,7 +4,7 @@ name: Setting Graph Size
 permalink: python/setting-graph-size/
 description: How to change the size of graphs in python.
 layout: base
-thumbnail: /images/sizing.png
+thumbnail: thumbnail/sizing.jpg
 language: python
 page_type: example_index
 has_thumbnail: false
