--- a/_posts/python/streamline/2015-07-13-streamline_python_index.html
+++ b/_posts/python/streamline/2015-07-13-streamline_python_index.html
@@ -4,7 +4,7 @@ name: Streamline Plots
 permalink: python/streamline-plots/
 description: How to make a streamline plot in Python. A streamline plot displays vector field data.
 layout: base
-thumbnail: /images/streamline.png
+thumbnail: thumbnail/streamline.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
