--- a/_posts/python/treemap/2015-06-30-treemap.html
+++ b/_posts/python/treemap/2015-06-30-treemap.html
@@ -3,7 +3,7 @@ permalink: python/treemaps
 description: How to make interactive treemap in Python with Plotly and Squarify. An examples of a treemap in Plotly using Squarify.
 title: Python Treemaps | plotly
 has_thumbnail: true
-thumbnail: /images/treemap.png
+thumbnail: thumbnail/treemap.jpg
 layout: user-guide
 name: Treemaps
 language: python
