--- a/_posts/python/3d-axes/2015-04-16-3d-axes_python_index.html
+++ b/_posts/python/3d-axes/2015-04-16-3d-axes_python_index.html
@@ -4,7 +4,7 @@ name: 3D Axes
 permalink: python/3d-axes/
 description: How to modify axes of 3d graphs
 layout: base
-thumbnail: /images/3d-scatter.png
+thumbnail: thumbnail/3d-scatter.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
