--- a/_posts/python/3d-line/2015-04-09-3d-line_python_index.html
+++ b/_posts/python/3d-line/2015-04-09-3d-line_python_index.html
@@ -4,7 +4,7 @@ name: 3D Line Plots
 permalink: python/3d-line-plots/
 description: How to make 3D line plots in python.
 layout: base
-thumbnail: /images/3d-line.png
+thumbnail: thumbnail/3d-line.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
