--- a/_posts/python/area/2015-04-09-area_python_index.html
+++ b/_posts/python/area/2015-04-09-area_python_index.html
@@ -4,7 +4,7 @@ name: Filled Area Plots
 permalink: python/filled-area-plots/
 description: How to make a filled area plot in python. An area chart displays a solid color between the traces of a graph.
 layout: base
-thumbnail: /images/area.png
+thumbnail: thumbnail/area.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
