--- a/_posts/python/axes/2015-04-09-axes_python_index.html
+++ b/_posts/python/axes/2015-04-09-axes_python_index.html
@@ -4,7 +4,7 @@ name: Axes
 permalink: python/axes/
 description: How to adjust axes properties in python. Seven examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
 layout: base
-thumbnail: /images/axes.png
+thumbnail: thumbnail/axes.jpg
 language: python
 page_type: example_index
 has_thumbnail: false
