--- a/_posts/python/bar/2015-04-09-bar_python_index.html
+++ b/_posts/python/bar/2015-04-09-bar_python_index.html
@@ -4,7 +4,7 @@ name: Bar Charts
 permalink: python/bar-charts/
 description: How to make a bar chart in python. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: thumbnail/bar.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
