--- a/_posts/python/bubble-maps/2015-06-29-bubble_python_index.html
+++ b/_posts/python/bubble-maps/2015-06-29-bubble_python_index.html
@@ -4,7 +4,7 @@ name: Bubble Maps
 permalink: python/bubble-maps/
 description: How to make a bubble map in Python. A bubble map overlays a bubble chart on a map.
 layout: base
-thumbnail: /images/bubble-map.png
+thumbnail: thumbnail/bubble-map.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
