--- a/_posts/python/bubble/2015-04-09-bubble_python_index.html
+++ b/_posts/python/bubble/2015-04-09-bubble_python_index.html
@@ -4,7 +4,7 @@ name: Bubble Charts
 permalink: python/bubble-charts/
 description: How to make a bubble chart in python. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
-thumbnail: /images/bubble.png
+thumbnail: thumbnail/bubble.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
