--- a/_posts/python/callbacks-hover/2015-04-09-hover_index.html
+++ b/_posts/python/callbacks-hover/2015-04-09-hover_index.html
@@ -4,7 +4,7 @@ name: Hover Events
 permalink: python/hover-events/
 description: How to add custom hover effects to Python charts with JavaScript. 
 layout: base
-thumbnail: /images/hover.png
+thumbnail: thumbnail/hover.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
