--- a/_posts/python/colorscales/2015-04-09-colorscales_python_index.html
+++ b/_posts/python/colorscales/2015-04-09-colorscales_python_index.html
@@ -4,7 +4,7 @@ name: Heatmap and Contour Colorscales
 permalink: python/heatmap-and-colorscales-colorscales/
 description: How to set colorscales and heatmap colorscales in Python and Plotly. Divergent, sequential, and qualitative colorscales.
 layout: base
-thumbnail: /images/colorbars.png
+thumbnail: thumbnail/colorbars.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
