--- a/_posts/python/contour/2015-04-09-contour_python_index.html
+++ b/_posts/python/contour/2015-04-09-contour_python_index.html
@@ -4,7 +4,7 @@ name: Contour Plots
 permalink: python/contour-plots/
 description: How to make a contour plot in python. Seven examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
-thumbnail: /images/contour.png
+thumbnail: thumbnail/contour.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
