--- a/_posts/python/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/python/dashboard/2015-07-29-dashboard-index.html
@@ -5,7 +5,7 @@ description: Dashboard of charts created and updated in Python, rendered with D3
 imageurl: https://plot.ly/gh-pages/documentation/static//images/dashboard.png
 permalink: python/dashboard/
 language: python
-thumbnail: /images/dashboard.png
+thumbnail: thumbnail/dashboard.jpg
 page_type: example_index
 has_thumbnail: true
 display_as: chart_type
