--- a/_posts/python/font/2015-04-09-font_python_index.html
+++ b/_posts/python/font/2015-04-09-font_python_index.html
@@ -4,7 +4,7 @@ name: Text and Font Styling
 permalink: python/font/
 description: How to edit and style the font of graphs in python.
 layout: base
-thumbnail: /images/font.png
+thumbnail: thumbnail/font.jpg
 language: python
 page_type: example_index
 has_thumbnail: false
