--- a/_posts/python/heatmap/2015-04-09-heatmap_python_index.html
+++ b/_posts/python/heatmap/2015-04-09-heatmap_python_index.html
@@ -4,7 +4,7 @@ name: Heatmaps
 permalink: python/heatmaps/
 description: How to make a heatmap in python with a matrix. Seven examples of colored and labeled heatmaps with custom colorscales.
 layout: base
-thumbnail: /images/heatmap.png
+thumbnail: thumbnail/heatmap.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
