--- a/_posts/python/histogram/2015-04-09-histogram_python_index.html
+++ b/_posts/python/histogram/2015-04-09-histogram_python_index.html
@@ -4,7 +4,7 @@ name: Histograms
 permalink: python/histograms/
 description: How to make a histogram in python. Seven examples of colored, horizontal, and normal histogram bar charts.
 layout: base
-thumbnail: /images/histogram.png
+thumbnail: thumbnail/histogram.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
