--- a/_posts/python/latex/2015-04-09-latex_python_index.html
+++ b/_posts/python/latex/2015-04-09-latex_python_index.html
@@ -4,7 +4,7 @@ name: LaTeX
 permalink: python/LaTeX/
 description: How to add LaTeX to python graphs.
 layout: base
-thumbnail: /images/latex.png
+thumbnail: thumbnail/latex.jpg
 language: python
 page_type: example_index
 has_thumbnail: false
