--- a/_posts/python/mixed/2015-04-09-mixed_python_index.html
+++ b/_posts/python/mixed/2015-04-09-mixed_python_index.html
@@ -4,7 +4,7 @@ name: Multiple Chart Types
 permalink: python/graphing-multiple-chart-types/
 description: How to design figures with multiple chart types in python. An example of a contour plot with a scatter plot and a bar chart with a line chart.
 layout: base
-thumbnail: /images/mixed.png
+thumbnail: thumbnail/mixed.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
