--- a/_posts/python/multiple-axes/2015-04-09-multiple-axes_python_index.html
+++ b/_posts/python/multiple-axes/2015-04-09-multiple-axes_python_index.html
@@ -4,7 +4,7 @@ name: Multiple Axes
 permalink: python/multiple-axes/
 description: How to make a graph with multiple axes in python.
 layout: base
-thumbnail: /images/multiple-axes.png
+thumbnail: thumbnail/multiple-axes.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
