--- a/_posts/python/subplots/2015-04-09-subplots_python_index.html
+++ b/_posts/python/subplots/2015-04-09-subplots_python_index.html
@@ -4,7 +4,7 @@ name: Subplots
 permalink: python/subplots/
 description: How to make subplots in python. Seven examples of stacked, custom-sized, and gridded subplots.
 layout: base
-thumbnail: /images/subplots.png
+thumbnail: thumbnail/subplots.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
