--- a/_posts/python/wind-rose/2015-04-09-wind-rose_python_index.html
+++ b/_posts/python/wind-rose/2015-04-09-wind-rose_python_index.html
@@ -4,7 +4,7 @@ name: Wind Rose Charts
 permalink: python/wind-rose-charts/
 description: How to graph wind rose charts in Python. 
 layout: base
-thumbnail: /images/wind-rose.png
+thumbnail: thumbnail/wind-rose.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
