new matlab user guide

--- a/_posts/user_guide_matlab/2015-05-28-user-guide.html
+++ b/_posts/user_guide_matlab/2015-05-28-user-guide.html
@@ -1,5 +1,5 @@
 ---
-permalink: matlab/user-guide/
+permalink: matlab/user-guide-old/
 description: A User Guide for plotly and its MATLAB API Library
 name: MATLAB API Library | Plotly
 layout: user-guide
